# pontodoi

./: .gitignore  README.md  pyproject.toml
papers/: __init__.py  cli.py  config.py  descoberta.py  download.py  institucional.py  registry.py  sessions.py  ui.py
