[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pontodoi"
version = "0.1.0"
description = "CLI para pesquisadores(as) brasileiros(as) baixarem papers automaticamente (Unpaywall + acesso institucional CAFe/CAPES + modo assistido)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "recuperacao-automatica-de-papers" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.31",
    "playwright>=1.44",
]

[project.scripts]
pontodoi = "papers.cli:app"

[tool.setuptools]
packages = ["papers"]
